[package]
name = "youtube_audio_feed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
atom_syndication = "0.12.1"
axum = { version = "0.6.18", features = ["macros", "headers"] }
futures = "0.3.28"
http = "0.2.9"
http-types = "2.12.0"
itertools = "0.10.5"
once_cell = "1.13.1"
rand = "0.8.5"
regex = "1.6.0"
reqwest = { version = "0.11.11", default_features = false, features = ["rustls-tls", "stream", "json"] }
rss = "2.0.1"
# the official extractor was throttled. See: https://github.com/DzenanJupic/rustube/issues/37
rustube = { version = "0.6.0", default_features = false, features = ["rustls-tls", "fetch"], git = "https://github.com/Discursif/rustube.git" }
serde = { version = "1.0.143", features = ["derive"] }
serde-query = "0.2.0"
serde_json = "1.0.96"
thiserror = "1.0.40"
# simd requires rustc nightly
# tl = { version = "0.7.6", features = ["simd"] }
tl = { version = "0.7.6" }
tokio = { version = "1.20.1", features = ["macros", "process"] }
